--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="drawer_close">关闭</string>
     <string name="header_author_name">秀恩爱</string>
     <string name="header_author_url">showlove.com</string>
+    <string name="hint_note_title">标题</string>
+    <string name="hint_note_content">内容</string>
 </resources>
